--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
             <br>
             <hr>
             <div>
-                <legend> papapdasdasd</legend>
+                <legend> GENERO</legend>
                 <br>
                 <input type="radio" id="Masculino" name="genero">
                 <label for="genero">Masculino</label>
